correction reponsive wrap section skills

--- a/styles/skills.css
+++ b/styles/skills.css
@@ -48,6 +48,11 @@ section.skills ul li article p.tittle{
 /**
     Responsive
 */
+@media screen and (max-width: 1600px) {
+    section.skills ul{
+        width: 75%;
+    }
+}
 @media screen and (max-width: 768px) {
     section.skills h1 {
         font-size: 3rem;
